Bug 1369850 - Remove the gap in version text when prefs are in window. r=jorgk

--- a/mail/themes/linux/mail/preferences/preferences.css
+++ b/mail/themes/linux/mail/preferences/preferences.css
@@ -240,6 +240,10 @@ a {
   -moz-box-flex: 0;
 }
 
+#version {
+  margin-inline-start: 0;
+}
+
 .update-throbber {
   width: 16px;
   min-height: 16px;
